collapse header btn functionallity,all sticky poistions fixed,more scss fixes

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -52,7 +52,9 @@ button {
   width: 100vw;
   height: 100vh;
 }
-
+.monday-style-dialog-content-wrapper{
+  z-index: 20;
+}
 /* Simple and useful CSS Debugging Technique */
 .debug * {
   outline: 1px solid gold;
