--- a/src/assets/styles/cmps/_GroupList.scss
+++ b/src/assets/styles/cmps/_GroupList.scss
@@ -31,7 +31,7 @@
     display: flex;
     align-items: center;
     position: sticky;
-    top: 199px;
+    top: 186px;
     z-index: 6;
     background-color: var(--primary-background-color);
     
