--- a/src/assets/styles/cmps/_SideBar.scss
+++ b/src/assets/styles/cmps/_SideBar.scss
@@ -1,17 +1,4 @@
-// DELETE LATER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-// DELETE LATER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-// body {
-//     background-color: black;
-// }
-
-// DELETE LATER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-// DELETE LATER!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
-
 .side-bar-container {
-    // position: sticky;
-    // top: 48px;
-    // z-index: 10;
-
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -23,6 +10,7 @@
     background-color: var(--primary-background-color);
     transition: all 0.2s;
     box-shadow: var(--box-shadow-xs);
+    border-top-right-radius: 8px;
 
     .btn-open-close {
         display: flex;
@@ -50,25 +38,32 @@
     }
 
     .side-bar-upper-container {
-        display: none;
-        border: none;
+        // border: none;
+        position: sticky;
+        top: 48px;
+        z-index: 5;
+
         width: 100%;
         padding-left: 12px;
         padding-block: 12px;
         // flex-direction: column;
-    }
 
-
-    .home-btn {
-        width: 203px;
-        height: 32px;
-        margin-bottom: 33px;
-        text-transform: none;
-        justify-content: left;
-        padding-left: 0.5em;
+        .home-btn {
+            display: none;
+            width: 203px;
+            height: 32px;
+            margin-bottom: 33px;
+            text-transform: none;
+            justify-content: left;
+            padding-left: 0.5em;
+        }
     }
 
     .side-bar-lower-container {
+        position: sticky;
+        top: 138px;
+        z-index: 5;
+
         display: none;
         width: 100%;
         flex-direction: column;
@@ -199,7 +194,10 @@
         }
 
         .side-bar-upper-container {
-            display: flex;
+            .home-btn {
+                display: flex;
+            }
+
             border-bottom: 1px solid var(--layout-border-color);
         }
 
