--- a/src/assets/styles/cmps/_TaskList.scss
+++ b/src/assets/styles/cmps/_TaskList.scss
@@ -12,7 +12,7 @@
 
   .header-title-container {
     position: sticky;
-    top: 227px;
+    top: 214px;
     z-index: 5;
     background-color: var(--primary-background-color);
 
@@ -80,6 +80,7 @@
     border-bottom: var(--border-width) var(--border-style) var(--ui-border-color);
     &:hover{
       background-color: rgb(245, 246, 248);
+      box-shadow: 4px 3px 6px -3px var(--ui-border-color);
       .task-menu-btn{
         opacity: 1;
       }
