--- a/src/assets/styles/cmps/_TaskMembers.scss
+++ b/src/assets/styles/cmps/_TaskMembers.scss
@@ -24,13 +24,13 @@
         font-size: 14px;
         margin: 0 -6px;
         border-radius: 50%;
-        width: 13px;
-        height: 13px;
+        width: 14px;
+        height: 14px;
         position: absolute;
         left: 14px;
 
         .line-one {
-            width: 9px;
+            width: 10px;
             height: 2px;
             background-color: white;
             position: absolute;
@@ -38,7 +38,7 @@
 
         .line-two {
             width: 2px;
-            height: 9px;
+            height: 10px;
             background-color: white;
             position: absolute;
         }
